[tool.poetry]
authors = ["Andrew Udvare <audvare@gmail.com>"]
description = "Host-side of the extension to open any link or page URL in mpv via the browser context menu."
license = "MIT"
name = "open-in-mpv"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0,<8.1.4"
loguru = "^0.7.0"
psutil = "^5.9.5"
pyxdg = "^0.28"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
yapf = "^0.33.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "^0.20.1"
esbonio = "^0.16.1"
sphinx = "^7.0.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coveralls = "^3.3.1"
mock = "^5.0.1"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
open-in-mpv = "open_in_mpv:open_in_mpv"
open-in-mpv-test = "open_in_mpv:test_open"
open-in-mpv-install = "open_in_mpv:install"
open-in-mpv-uninstall = "open_in_mpv:uninstall"

[tool.isort]
case_sensitive = true
combine_as_imports = true
from_first = true
line_length = 100
order_by_type = true
use_parentheses = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
mypy_path = "./.stubs"
show_column_numbers = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
mock_use_standalone_module = true

[tool.rstcheck]
ignore_directives = "automodule"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false
